# ellipsis

./: .gitignore  .travis.yml  Cargo.toml  README.md  output.html  test.sh
doc/: ellipsis-destroy.1  ellipsis-edit.1  ellipsis-git.1  ellipsis-home.1  ellipsis-init.1  ellipsis.1
src/: app.rs  error.rs  ext.rs  lib.rs  main.rs  result.rs  scope.rs
src/config/: mod.rs  test.rs
src/destroy/: mod.rs  test.rs
src/edit/: mod.rs
src/git/: mod.rs  test.rs
src/home/: mod.rs  test.rs
src/init/: mod.rs  test.rs
src/link/: mod.rs  test.rs
src/test/: app_test.rs  ext_test.rs  mod.rs  testdirs.rs
src/unlink/: mod.rs  test.rs
