[package]
name = "ellipsis"
version = "0.1.0"
authors = ["Andrew Lee <andrewl@mbda.fun>"]

description = "A dotfile manager"
license = "GPLv3"

[dependencies]
clap       = "2.31.2"
colored    = "1.6.1"
dirs       = "1.0.3"
git2       = "0.7.3"
hostname   = "^0.1"
serde_json = "1.0.19"
shellexpand = "1.0.0"

[dev-dependencies]
rand = "0.5.5"
